--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=players
+spring.data.mongodb.collection=playersModel
+spring.data.mongodb.auto-index-creation:true
+
 
